src/app/views/details/details.view.scss
.details {
  .content {
    padding: 12px 30px 30px 30px;
    min-width: $niem-min-width;
    max-width: $niem-max-width;
    margin: 0 auto;

    .back-link {
      font-size: 12px;
      letter-spacing: 0.5px;
      color: $ocean-blue;
      cursor: pointer;
    }

    .details-heading {
      background-image: linear-gradient(to left, #29819c, #004666);
      filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#29819c', endColorstr='#004666');/*For IE7-8-9*/
      color: $white;
      padding: 15px 21px 14px 21px;
      margin-top: 13px;
      margin-bottom: 5px;
      h1 {
        margin: 0 0 2px 0;
        letter-spacing: 0.5px;
      }
      .details-heading-img {
        width: 17.9px;
      }
      .namespace {
        color: $seafoam;
        letter-spacing: 0.5px;
      }
    }

    .details-info {
      display: inline-flex;
      margin: auto;
      margin-bottom: 6px;
      .details-info-col {
        width: 50%;
        display: inline-block;
        &:nth-child(odd) {
          .details-info-content {
            margin: 0 5px 0 0;
          }
        }
        &:nth-child(even) {
          .details-info-content {
            margin: 0 0 0 10px;
          }
        }
      }

      .details-info-content {
        width: 600px;
        min-height: 106px;
        border: 1px solid;
        border-color: lighten($ocean-blue, 50%);
        padding: 20px;
        align-items: center;
        display: flex;
        .auto-height {
          height: auto;
        }
        .symbol-div {
          display: inline-block;
          height: 66px;
          border-right: 1px solid;
          border-color: lighten($ocean-blue, 50%);
          padding-right: 15px;
          img {
            margin-top: 11px;
            height: 44px;
            width: 44px;
          }
        }

        .details-text {
          display: inline-block;
          vertical-align: middle;
          margin-left: 20px;
          max-width: 478px;
          h3 {
            letter-spacing: 0.5px;
            color: $marine-blue;
            margin: 0;
            padding-bottom: 8px;
            .dotted-underline {
              border-bottom: 1px dashed;

            }
          }
          p {
            margin: 0;
            letter-spacing: 0.5px;
            color: rgba(0, 0, 0, 0.58);
          }
        }
      }
    }

    .details-desc {
      padding-top: 37px;
      .contain-list {
        .has-none {
          padding-left: 20px;
        }
        .panel-group {
          .panel-default {
            padding: 10px;
            border: 0;
            border-radius: 0;
            box-shadow: none;
            .panel-heading {
              background-color: $white;
              h2 {
                letter-spacing: 0.5px;
                color: $marine-blue;
                margin: 0;
              }
            }
            .accordion-toggle {
              &:hover, &:focus {
                text-decoration: none;
              }
            }
          }

        }
      }
    }
  }

}

